--- a/Colmar_Academy/resource/style.css
+++ b/Colmar_Academy/resource/style.css
@@ -1,3 +1,151 @@
-.desktop-logo {
+#header {
+    position: fixed;
+    width: 100%;
+    height: 64px;
+    z-index: 1;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    top: 0%;
+    padding-left: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#header nav {
+    margin-left: 750px;
+    padding-right: 24px;
+}
+
+#header span {
+    font-weight: bold;
+}
+
+#header h3 {
+    font-weight: normal;
+    font-size: 20px;
+}
+
+#header a {
+    text-decoration: none;
+    color: black;
+}
+
+#header nav li {
     display: inline-block;
+    padding-right: 16px;
+    font-size: 16px;
+}
+
+
+/*overview*/
+
+#overview {
+    background-color: lightgray;
+    display: flex;
+    margin-top: 70px;
+    justify-content: space-evenly;
+}
+
+#overview img {
+    width: 50%;
+    padding: 40px;
+    height: 450px
+}
+
+#overview h1,
+h4,
+button {
+    display: flex;
+    flex-direction: column;
+}
+
+.content-box h1 {
+    font-size: 40px;
+}
+
+.content-box h4 {
+    font-size: 25px;
+    font-weight: normal;
+}
+
+.content-box {
+    margin-top: 50px;
+    padding: 50px;
+}
+
+.content-box button {
+    width: 350px;
+    height: 50px;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: black;
+}
+
+
+/*highlight area*/
+
+#container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.highlight {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    justify-content: space-around;
+    padding: 0 20px;
+}
+
+.highlight h2 {
+    font-size: 40px;
+    margin-bottom: 15px;
+}
+
+.article {
+    margin-top: 5px;
+}
+
+.paragraph {
+    line-height: 25px;
+}
+
+
+/*.highlight img {
+    width: 60%;
+    height: 500px;
+}*/
+
+.layout {
+    display: flex;
+    flex-direction: column;
+}
+
+.new-layout {
+    display: flex;
+    padding: 20px 25px;
+    border: 1px solid lightgray;
+}
+
+.new-layout img {
+    width: 40%;
+    padding: 0 24px;
+}
+
+.gray {
+    background-color: lightgray;
+    border: none;
+}
+
+.layout-font {
+    display: inline-block;
+    /*flex-direction: column;*/
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.layout-font a {
+    text-decoration: none;
 }
