--- a/Colmar_Academy/resource/style.css
+++ b/Colmar_Academy/resource/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 #header {
     position: fixed;
     width: 100%;
@@ -89,34 +93,35 @@ button {
 #container {
     display: flex;
     justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 40px;
 }
 
 .highlight {
     display: flex;
     flex-direction: column;
     width: 60%;
-    justify-content: space-around;
-    padding: 0 20px;
+    /*justify-content: space-around;*/
+    padding-left: 40px;
 }
 
 .highlight h2 {
-    font-size: 40px;
-    margin-bottom: 15px;
+    font-size: 45px;
+    margin-bottom: 25px;
 }
 
 .article {
-    margin-top: 5px;
+    margin-top: 20px;
 }
 
 .paragraph {
     line-height: 25px;
 }
 
-
-/*.highlight img {
-    width: 60%;
-    height: 500px;
-}*/
+.highlight img {
+    width: 710px;
+    height: 460px;
+}
 
 .layout {
     display: flex;
@@ -125,13 +130,14 @@ button {
 
 .new-layout {
     display: flex;
-    padding: 20px 25px;
+    padding: 20px 0;
     border: 1px solid lightgray;
 }
 
 .new-layout img {
-    width: 40%;
+    width: 30%;
     padding: 0 24px;
+    height: 200px;
 }
 
 .gray {
@@ -142,10 +148,51 @@ button {
 .layout-font {
     display: inline-block;
     /*flex-direction: column;*/
-    margin-left: 20px;
     margin-top: 15px;
+    padding: 0 20px;
 }
 
 .layout-font a {
     text-decoration: none;
+}
+
+
+/*learning section*/
+
+#learning {
+    background-color: lightgrey;
+    padding: 20px 0;
+}
+
+.learning-section {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+    padding: 0 85px;
+}
+
+.learning-title {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    padding: 20px 50px;
+    font-size: 20px;
+}
+
+.categories {
+    background-color: white;
+    width: 350px;
+    height: 350px;
+    margin: 24px 20px;
+    display: inline-block;
+    /*flex-wrap: wrap;*/
+}
+
+.categories img {
+    width: 350px;
+}
+
+.cat-info {
+    padding: 0 20px;
+    font-size: 15px;
 }
